--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,7 +10,7 @@
         </p>
         <a href="#" class="mt-2 block">
           <p class="text-xl font-semibold text-gray-900">
-            <%= @book.title %>
+            <%= @book_view_model.book_title %>
           </p>
           <p class="mt-3 text-base text-gray-500">
             The Hobbit is a children's fantasy novel by English author J. R. R. Tolkien. It was
@@ -27,7 +27,7 @@
         <div class="ml-3">
           <p class="text-sm font-medium text-gray-900">
             <a href="#" class="hover:underline">
-              <%= @book.author.full_name %>
+              <%= @book_view_model.book_author %>
             </a>
           </p>
           <div class="flex space-x-1 text-sm text-gray-500">
@@ -38,10 +38,10 @@
 
       <dl class="sm:divide-y sm:divide-gray-200 mt-4">
         <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5">
-          <dt class="text-sm font-medium text-gray-500">Reservations <%= @reservations.count %>:</dt>
+          <dt class="text-sm font-medium text-gray-500">Reservations <%= @book_view_model.reservations.count %>:</dt>
           <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
             <ul>
-              <% @reservations.each do |reservation| %>
+              <% @book_view_model.reservations.each do |reservation| %>
                 <li class="mb-2">
                   <%= reservation.user.full_name %>
                 </li>
@@ -52,15 +52,15 @@
       </dl>
       <dl class="sm:divide-y sm:divide-gray-200 mt-4">
         <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5">
-          <dt class="text-sm font-medium text-gray-500">Borrow history <%= @borrow_histories.count %>:</dt>
+          <dt class="text-sm font-medium text-gray-500">Borrow history <%= @book_view_model.borrow_histories.count %>:</dt>
           <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
             <ul>
-              <% @borrow_histories.each do |history| %>
+              <% @book_view_model.borrow_histories.each do |history| %>
                 <li class="mb-2 flex flex-col">
-                  <span class="font-bold"><%= history.user.full_name %></span>
+                  <span class="font-bold"><%= history.user_name %></span>
                   <p>
-                    <span>Borrowed at:</span> <%= history.borrowed_at.strftime("%d.%m.%Y") %>
-                    <span>Returned at:</span> <%= history.borrowed_at.strftime("%d.%m.%Y") %>
+                    <span>Borrowed at:</span> <%= history.borrow_date %>
+                    <span>Returned at:</span> <%= history.return_date %>
                   </p>
                 </li>
                 <hr />
